@@ -1,21 +1,0 @@
-<Type Name="ModuleClassInitHook" FullName="Gnome.ModuleClassInitHook">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public delegate void ModuleClassInitHook();" />
-  <AssemblyInfo>
-    <AssemblyName>gnome-sharp</AssemblyName>
-    <AssemblyVersion>2.6.0.0</AssemblyVersion>
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>Called to perform any class specific setup that is required by each module.</summary>
-    <remarks>To be added.</remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.Delegate</BaseTypeName>
-  </Base>
-  <Members />
-  <Parameters>
-  </Parameters>
-  <ReturnValue>
-    <ReturnType>System.Void</ReturnType>
-  </ReturnValue>
-</Type>
