@@ -1,28 +1,0 @@
-<Type Name="ModuleHook" FullName="Gnome.ModuleHook">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public delegate void ModuleHook(Gnome.Program program, Gnome.ModuleInfo mod_info);" />
-  <AssemblyInfo>
-    <AssemblyName>gnome-sharp</AssemblyName>
-    <AssemblyVersion>2.6.0.0</AssemblyVersion>
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>
-    Called to perform some initialization in a module 
-    (which could be either the main init function or the pre or post argument parsing phase).
-    </summary>
-    <param name="program">The <see cref="T:Gnome.Program" /> instance which is being initialized.</param>
-    <param name="mod_info">The current module's <see cref="T:Gnome.ModuleInfo" /> structure.</param>
-    <remarks>To be added.</remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.Delegate</BaseTypeName>
-  </Base>
-  <Members />
-  <Parameters>
-    <Parameter Name="program" Type="Gnome.Program" />
-    <Parameter Name="mod_info" Type="Gnome.ModuleInfo" />
-  </Parameters>
-  <ReturnValue>
-    <ReturnType>System.Void</ReturnType>
-  </ReturnValue>
-</Type>
