@@ -1,5 +1,5 @@
 <Type Name="ModuleInfo" FullName="Gnome.ModuleInfo">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public struct ModuleInfo" />
+  <TypeSignature Language="C#" Maintainer="auto" Value="public class ModuleInfo : GLib.Opaque" />
   <AssemblyInfo>
     <AssemblyName>gnome-sharp</AssemblyName>
     <AssemblyPublicKey>
@@ -12,50 +12,13 @@
     <remarks>To be added</remarks>
   </Docs>
   <Base>
-    <BaseTypeName>System.ValueType</BaseTypeName>
+    <BaseTypeName>GLib.Opaque</BaseTypeName>
   </Base>
   <Interfaces />
   <Members>
-    <Member MemberName="Zero">
-      <MemberSignature Language="C#" Value="public static Gnome.ModuleInfo Zero;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleInfo</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="New">
-      <MemberSignature Language="C#" Value="public static Gnome.ModuleInfo New (IntPtr raw);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleInfo</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="raw" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gnome.ModuleInfo'</returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="requirements">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleRequirement requirements { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleRequirement</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added</summary>
-        <value>To be added: an object of type 'Gnome.ModuleRequirement'</value>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
+    
+    
+    
     <Member MemberName="GType">
       <MemberSignature Language="C#" Value="public static GLib.GType GType { get; };" />
       <MemberType>Property</MemberType>
@@ -69,95 +32,34 @@
         <remarks>Returns the native <see cref="T:GLib.GType" /> value for <see cref="T:Gnome.ModuleInfo" />.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="Name">
-      <MemberSignature Language="C#" Value="public string Name;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
+    
+    
+    
+    
+  
+  
+  
+  
+  
+  
+  
+  <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public ModuleInfo (IntPtr raw);" />
+      <MemberType>Constructor</MemberType>
       <Parameters>
+        <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="Version">
-      <MemberSignature Language="C#" Value="public string Version;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="Description">
-      <MemberSignature Language="C#" Value="public string Description;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="OptPrefix">
-      <MemberSignature Language="C#" Value="public string OptPrefix;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-  <Member MemberName="op_Explicit">
-      <MemberSignature Language="C#" Value="public static GLib.Value op_Explicit (Gnome.ModuleInfo boxed);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.Value</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="boxed" Type="Gnome.ModuleInfo" />
-      </Parameters>
-      <Docs>
-        <param name="boxed">To be added.</param>
+        <param name="raw">To be added.</param>
         <summary>To be added.</summary>
-        <returns>To be added.</returns>
         <remarks>To be added.</remarks>
       </Docs>
     </Member>
-  <Member MemberName="op_Explicit">
-      <MemberSignature Language="C#" Value="public static Gnome.ModuleInfo op_Explicit (GLib.Value val);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleInfo</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="val" Type="GLib.Value" />
-      </Parameters>
-      <Docs>
-        <param name="val">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
-      </Docs>
-    </Member>
-  <Member MemberName="InstanceInit">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleHook InstanceInit { get; };" />
+  <Member MemberName="Name">
+      <MemberSignature Language="C#" Value="public string Name { get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
-        <ReturnType>Gnome.ModuleHook</ReturnType>
+        <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
         <summary>To be added.</summary>
@@ -165,11 +67,11 @@
         <remarks>To be added.</remarks>
       </Docs>
     </Member>
-  <Member MemberName="PreArgsParse">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleHook PreArgsParse { get; };" />
+  <Member MemberName="Description">
+      <MemberSignature Language="C#" Value="public string Description { get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
-        <ReturnType>Gnome.ModuleHook</ReturnType>
+        <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
         <summary>To be added.</summary>
@@ -177,35 +79,11 @@
         <remarks>To be added.</remarks>
       </Docs>
     </Member>
-  <Member MemberName="PostArgsParse">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleHook PostArgsParse { get; };" />
+  <Member MemberName="Version">
+      <MemberSignature Language="C#" Value="public string Version { get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
-        <ReturnType>Gnome.ModuleHook</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added.</summary>
-        <value>To be added.</value>
-        <remarks>To be added.</remarks>
-      </Docs>
-    </Member>
-  <Member MemberName="InitPass">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleInitHook InitPass { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleInitHook</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added.</summary>
-        <value>To be added.</value>
-        <remarks>To be added.</remarks>
-      </Docs>
-    </Member>
-  <Member MemberName="ClassInit">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleClassInitHook ClassInit { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleClassInitHook</ReturnType>
+        <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
         <summary>To be added.</summary>
