@@ -1,28 +1,0 @@
-<Type Name="ModuleInitHook" FullName="Gnome.ModuleInitHook">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public delegate void ModuleInitHook(Gnome.ModuleInfo mod_info);" />
-  <AssemblyInfo>
-    <AssemblyName>gnome-sharp</AssemblyName>
-    <AssemblyVersion>2.6.0.0</AssemblyVersion>
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>
-    Called to allow a module to do any pre-initialization it might need to do 
-    prior to having arguments parsed by the controlling parent module.
-    </summary>
-    <param name="mod_info">The current module's <see cref="T:Gnome.ModuleInfo" /> structure.</param>
-    <remarks>
-      <para>The parent module will do the argument parsing for all modules in the hierarchy.</para>
-    </remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.Delegate</BaseTypeName>
-  </Base>
-  <Members />
-  <Parameters>
-    <Parameter Name="mod_info" Type="Gnome.ModuleInfo" />
-  </Parameters>
-  <ReturnValue>
-    <ReturnType>System.Void</ReturnType>
-  </ReturnValue>
-</Type>
