@@ -1,73 +1,0 @@
-<Type Name="ModuleRequirement" FullName="Gnome.ModuleRequirement">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public struct ModuleRequirement" />
-  <AssemblyInfo>
-    <AssemblyName>gnome-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
-    <AssemblyVersion>2.6.0.0</AssemblyVersion>
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.ValueType</BaseTypeName>
-  </Base>
-  <Interfaces />
-  <Members>
-    <Member MemberName="Zero">
-      <MemberSignature Language="C#" Value="public static Gnome.ModuleRequirement Zero;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleRequirement</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="New">
-      <MemberSignature Language="C#" Value="public static Gnome.ModuleRequirement New (IntPtr raw);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleRequirement</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="raw" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gnome.ModuleRequirement'</returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="module_info">
-      <MemberSignature Language="C#" Value="public Gnome.ModuleInfo module_info { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gnome.ModuleInfo</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added</summary>
-        <value>To be added: an object of type 'Gnome.ModuleInfo'</value>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="RequiredVersion">
-      <MemberSignature Language="C#" Value="public string RequiredVersion;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-  </Members>
-</Type>
