@@ -1408,7 +1408,6 @@
       <Type Name="IconUnselectedArgs" />
       <Type Name="MDIMode" />
       <Type Name="ModuleInfo" />
-      <Type Name="ModuleRequirement" />
       <Type Name="MoveCursorArgs" />
       <Type Name="MoveFocusOutOfAppletArgs" />
       <Type Name="NextClickedArgs" />
@@ -1496,9 +1495,6 @@
       <Type Name="IconSelectedHandler" />
       <Type Name="IconUnselectedHandler" />
       <Type Name="InteractFunction" />
-      <Type Name="ModuleClassInitHook" />
-      <Type Name="ModuleHook" />
-      <Type Name="ModuleInitHook" />
       <Type Name="MoveCursorHandler" />
       <Type Name="MoveFocusOutOfAppletHandler" />
       <Type Name="NextClickedHandler" />
