@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
+  <attr path="/api/namespace/callback[@cname='GnomeModuleClassInitHook']" name="hidden">1</attr>
+  <attr path="/api/namespace/callback[@cname='GnomeModuleHook']" name="hidden">1</attr>
+  <attr path="/api/namespace/callback[@cname='GnomeModuleInitHook']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GnomePrintButtons']/member[@name='Cancel']" name="value">(int)Gtk.ResponseType.Cancel</attr>
   <attr path="/api/namespace/object[@cname='GnomeApp']/constructor[@cname='gnome_app_new']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GnomeApp']/field[@name='AccelGroup']" name="access">public</attr>
@@ -16,6 +19,10 @@
   <attr path="/api/namespace/object[@cname='GnomeDateEdit']/method[@name='GetFlags']" name="new_flag">1</attr>
   <attr path="/api/namespace/boxed[@cname='GnomeCanvasPoints']" name="opaque">1</attr>
   <attr path="/api/namespace/boxed[@cname='GnomeGlyphList']/method/*/*[@type='const-guchar*']" name="type">const-gchar*</attr>
+  <attr path="/api/namespace/boxed[@cname='GnomeModuleInfo']" name="opaque">1</attr>
+  <attr path="/api/namespace/boxed[@cname='GnomeModuleInfo']/field[@name='Name']" name="access">public</attr>
+  <attr path="/api/namespace/boxed[@cname='GnomeModuleInfo']/field[@name='Version']" name="access">public</attr>
+  <attr path="/api/namespace/boxed[@cname='GnomeModuleInfo']/field[@name='Description']" name="access">public</attr>
   <attr path="/api/namespace/boxed[@cname='GnomePrintUnit']/method/*/*[@type='const-guchar*']" name="type">const-gchar*</attr>
   <attr path="/api/namespace/boxed[@cname='GnomePrintUnit']/method[@name='GetIdentity']/*/*[@name='base']" name="name">Base</attr>
   <attr path="/api/namespace/callback[@cname='GnomeTriggerActionFunction']/*/*[@name='supinfo']" name="type">const-char*</attr>
@@ -139,6 +146,7 @@
   <attr path="/api/namespace/object[@cname='GnomePrintPdf']" name="parent">GObject</attr>
   <attr path="/api/namespace/object[@cname='GnomePrintTransport']" name="parent">GObject</attr>
   <attr path="/api/namespace/object[@cname='GnomePropertyBox']/method[@name='SetState']" name="new_flag">1</attr>
+  <attr path="/api/namespace/object[@cname='GnomeScores']/constructor[@cname='gnome_scores_new']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GPAOptionMenu']/constructor/*/*[@type='const-guchar*']" name="type">const-gchar*</attr>
   <attr path="/api/namespace/object[@cname='PanelAppletShell']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='PanelApplet']/method[@cname='panel_applet_factory_main']" name="hidden">1</attr>
@@ -153,7 +161,7 @@
   <attr path="/api/namespace/struct[@cname='GnomeCanvasPathDef']/method[@name='Split']/return-type" name="element_type">GnomeCanvasPathDef*</attr>
   <attr path="/api/namespace/struct[@cname='GnomeCanvasPathDef']/method[@name='Split']/return-type" name="owned">true</attr>
   <attr path="/api/namespace/struct[@cname='GnomeCanvasPathDef']/method[@name='Split']/return-type" name="elements_owned">true</attr>
-  <attr path="/api/namespace/struct[@cname='GPFontEntry']/field[@cname='weight']" name="access">private</attr>
+  <attr path="/api/namespace/struct[@cname='GnomeModuleRequirement']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GnomePrintPaper']/method/*/*[@type='const-guchar*']" name="type">const-gchar*</attr>
-  <attr path="/api/namespace/object[@cname='GnomeScores']/constructor[@cname='gnome_scores_new']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GPFontEntry']/field[@cname='weight']" name="access">private</attr>
 </metadata>
