@@ -29,13 +29,13 @@ namespace Gnome
 
 		public static ModuleInfo LibGnome {
 			get { 
-				return ModuleInfo.New (libgnome_module_info_get ());
+				return new ModuleInfo (libgnome_module_info_get ());
 			}
 		}
 
 		public static ModuleInfo UI {
 			get { 
-				return ModuleInfo.New (libgnomeui_module_info_get ());
+				return new ModuleInfo (libgnomeui_module_info_get ());
 			}
 		}
 	}
