@@ -1,3 +1,13 @@
+2005-07-07  Dan Winship  <danw@novell.com>
+
+	* gnome/Gnome.metadata: opaquify ModuleInfo and hide the types
+	that are only used inside ModuleInfo, so we don't marshal the
+	function pointers into (incorrect) delegates.
+
+	* gnome/Modules.cs: 
+	* gnome/Program.custom: update for ModuleInfo being a class rather
+	than a struct now
+
 2005-07-02  Mike Kestner  <mkestner@novell.com>
 
 	* generator/StructField.cs : fix name exception throw conditional.
